@@ -559,4 +559,6 @@ Thanks to:
    code and Vu Pham <huongvp@yahoo.com> who updated it for the VDISK dev
    handler.
 
+ * Michael G. Byrnes <michael.byrnes@hp.com> for fixes.
+
 Vladislav Bolkhovitin <vst@vlnb.net>, http://scst.sourceforge.net
